@@ -49,8 +49,6 @@
 -Djruby.compile.invokedynamic=true
 # Force Compilation
 -Djruby.jit.threshold=0
-# Make sure joni regexp interruptability is enabled
--Djruby.regexp.interruptible=true
 
 ## heap dumps
 
@@ -74,9 +72,3 @@
 
 # Copy the logging context from parent threads to children
 -Dlog4j2.isThreadContextMapInheritable=true
-
-11-:--add-opens=java.base/java.security=ALL-UNNAMED
-11-:--add-opens=java.base/java.io=ALL-UNNAMED
-11-:--add-opens=java.base/java.nio.channels=ALL-UNNAMED
-11-:--add-opens=java.base/sun.nio.ch=ALL-UNNAMED
-11-:--add-opens=java.management/sun.management=ALL-UNNAMED
